<resources>
    <string name="app_name">Tex</string>
    <string name="authorization">Authorization</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="next">next</string>
    <string name="registration">Registration</string>
    <string name="sign_in">sign in</string>
    <string name="start_your_journey_with_tex">Start your journey with Tex</string>
    <string name="tex">Tex</string>
    <string name="new_">New</string>
    <string name="popular">Popular</string>
    <string name="share">share</string>
    <string name="comments">comments</string>
    <string name="friend_list">friend list</string>
    <string name="clear_saved">clear saved</string>
    <string name="log_out">log out</string>
    <string name="friend_list_is_empty">friend list is empty</string>
    <string name="follow">follow</string>
    <string name="comments_are_empty">comments are empty</string>
    <string name="unfollow">unfollow</string>
    <string name="reply">reply</string>
    <string name="join">join</string>
    <string name="show_all">show all</string>
    <string name="posts">posts</string>
    <string name="see_all"><![CDATA[see all >]]></string>
    <string name="replies">replies</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="friends">friends:</string>
    <string name="unable_to_get_data">unable to get data</string>
    <string name="failed_to_follow">failed to follow</string>
    <string name="failed_to_unfollow">failed to unfollow</string>
    <string name="karma">karma:</string>
    <string name="User_has_been_added_to_friends">User has been added to friends</string>
    <string name="User_has_not_been_added_to_friends">User has not been added to friends</string>
    <string name="User_has_been_unfriended">User has been unfriended</string>
    <string name="User_has_not_been_unfriended">User has not been unfriended</string>
    <string name="Failed_to_follow_user">Failed to follow user</string>
    <string name="Failed_to_unfollow_user">Failed to unfollow user</string>
    <string name="welcome_to_tex">Welcome to Tex!</string>
    <string name="travel_among_many_communities">Travel among many communities</string>
    <string name="look_for_new_interests">Look for new interests</string>
    <string name="save_and_share_interesting_posts">Save and share interesting posts</string>
    <string name="get_started">Get started</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="unsaved_successfully">Unsaved successfully</string>
    <string name="unable_to_save">Unable to save </string>
    <string name="unable_to_unsave">Unable to unsave </string>
    <string name="add_comment">Add comment</string>
    <string name="comment_has_been_added">Comment has been added</string>
    <string name="error_comment_was_not_added">Error, comment was not added</string>
    <string name="sent_successfully">Sent successfully</string>
    <string name="error_reply_was_not_added">Error, reply was not added</string>
    <string name="now">now</string>
    <string name="posted">posted</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="search">Search</string>
    <string name="save_post">Save post</string>
    <string name="local">Local</string>
    <string name="online">Online</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Confirm</string>
    <string name="delete_item">Delete item?</string>
</resources>