<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary">

    <androidx.cardview.widget.CardView
        android:id="@+id/infoCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimaryVariant">

            <ProgressBar
                android:id="@+id/profileProgressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:src="@mipmap/ic_launcher"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nicknameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="24sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/avatarImageView"
                app:layout_constraintStart_toStartOf="@+id/avatarImageView"
                app:layout_constraintTop_toBottomOf="@+id/avatarImageView"
                tools:text="nickname" />

            <TextView
                android:id="@+id/karmaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/nicknameTextView"
                app:layout_constraintStart_toStartOf="@+id/nicknameTextView"
                app:layout_constraintTop_toBottomOf="@+id/nicknameTextView"
                tools:text="karma 2304" />

            <Button
                android:id="@+id/followButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="20dp"
                android:text="@string/follow"
                android:textColor="@color/white"
                android:enabled="false"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/karmaTextView" />

            <Button
                android:id="@+id/unfollowButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="20dp"
                android:text="@string/unfollow"
                android:enabled="false"
                android:visibility="invisible"
                style="?attr/materialButtonOutlinedStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/karmaTextView" />

            <ImageButton
                android:id="@+id/addToFriendButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="?attr/selectableItemBackground"
                android:enabled="false"
                android:src="@drawable/ic_subscribe"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/followButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/followButton"
                app:layout_constraintTop_toTopOf="@+id/followButton"
                app:tint="@color/c900" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/refreshLayout"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoCardView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userCommentsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_user_comment" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoCardView" />

    <TextView
        android:id="@+id/noCommentsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/comments_are_empty"
        android:textColor="@color/gray_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>